k8s/be-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: be
    # app: be-cluster-ip-service
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
    # - port: 3000
    #   targetPort: be-port
    #   name: be-cluster-ip-service
    #   protocol: TCP
    #
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    - nodePort: 31515
      port: 3000
      # targetPort: be-port
      targetPort: 3000
